--- a/website/css/less/templating.less
+++ b/website/css/less/templating.less
@@ -775,6 +775,16 @@
   @media (min-width: @screen-m) { float: left; }
 }
 
+// sponsor rules
+.fxs_broker_sponsor_wrapper{
+  margin-top: @main_header_height;
+  margin-bottom: @main_header_height;
+  .fxs_broker_sponsor_title{
+    padding: 0 1.5rem 0.3rem 1.5rem;
+    display:block;
+  }
+}
+
 ///////////////////////////////////////////////////////////
 /////////////// Layouts grid system //////////////////////
 /////////////////////////////////////////////////////////
